# manga-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/manga-agent/: SKILL.md
.agents/skills/manga-agent/agents/: openai.yaml
.agents/skills/manga-agent/references/: agent-qa.md  mangagen-workflows.md  review-gates.md
.github/workflows/: test.yml
agents/: manga_editor_agent.md
docs/: bubble_render_research.md  harness.md  hosted-provider.md  jump_manga_school_principles.md  manga_craft_research.md  manga_principles.md  review_checklist.md  series_principles.md  sources.md  x_ads_manga_principles.md
docs/knowledge/: INDEX.md
docs/knowledge/articles/: production-postmortem-dual-pov.md  production-postmortem-reading-order.md  visual-qa-checklist.md
examples/demo-product/: README.md
examples/demo-product/manga/production/spec/: pro_panel_craft.md  storyboard.json
preveiw/: README.md  index.html  package-lock.json  package.json
preveiw/scripts/: sync-onibaku-all.mjs  sync-onibaku-ep01.mjs  sync-onibaku-ep02.mjs
preveiw/src/: episodes.ts  main.ts  styles.css
projects/onibaku/: README.md  脚本.md
projects/onibaku/manga/ep01-yobimizu/production/spec/: name_v2.md  pro_panel_craft.md  script.md  storyboard.json
projects/onibaku/manga/ep02-isourou/production/spec/: name_review.md  name_v2.md  pro_panel_craft.md  script.md  script_review.md  storyboard.json
projects/onibaku/manga/production/spec/: adaptation_design.md  name_review_checklist.md  script_craft_research.md  script_framework.md  script_review_checklist.md  series.json  story_bible.md  workflow.md
projects/onibaku/source/: source_meta.json
server/: requirements.txt  vercel.json
server/app/: __init__.py  auth.py  main.py  proxy.py  tokens.py  web.py
server/supabase/: config.toml
server/supabase/migrations/: 001_user_tokens.sql  002_signup_grant_50.sql
server/tests/: test_api.py  test_auth.py  test_proxy.py  test_tokens.py  test_web_auth.py  test_web_helpers.py  test_web_session.py
templates/: name_review_checklist.md  name_review_request.md  pro_panel_craft_base.md  script_review_checklist.md  series.json  series_review_checklist.md  story_brief.md
tests/: conftest.py  test_build_prompt.py  test_image_provider.py  test_manga_cli.py  test_manga_config.py  test_manga_hosted.py  test_mangagen_carousel.py  test_mangagen_commands.py  test_mangagen_core.py  test_mangagen_gen.py  test_mangagen_lint_extra.py  test_mangagen_series.py
tools/: build_prompt.py  image_provider.py  manga_cli.py  manga_config.py  manga_hosted.json  manga_hosted.py  mangagen.py
