[project]
name = "manga-agent"
version = "0.1.0"
description = "Manga editor agent prompts and a spec-driven AI manga production harness."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
