[project]
name = "manga-agent"
version = "0.1.0"
description = "Manga editor agent prompts and a spec-driven AI manga production harness."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "httpx",
]

[project.scripts]
manga = "manga_cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
server = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "PyJWT",
    "python-multipart",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests", "server/tests"]
pythonpath = ["tools", "server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "tools/manga_cli.py",
    "tools/manga_config.py",
    "tools/manga_hosted.py",
    "tools/manga_hosted.json",
    "tools/image_provider.py",
    "tools/mangagen.py",
]

[tool.hatch.build.targets.wheel.sources]
"tools" = ""
